--- a/EternocellLottery/appsettings.json
+++ b/EternocellLottery/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    //"SqlConnection": "Data Source =SQLLow03.centraldnserver.com;Initial Catalog = YanoCoffee;Persist Security Info=True;Integrated Security=False;User ID =yano-h4WTw_sa; Password=Iamirehsan1998!;Connect Timeout=15000;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-    "SqlConnection": "Data Source=.;Initial Catalog=Lottery;Integrated Security=True;TrustServerCertificate=True;Persist Security Info=true;MultipleActiveResultSets=True"
+    "SqlConnection": "Data Source =SQLLow04.centraldnserver.com;Initial Catalog = YanoCoffee;Persist Security Info=True;Integrated Security=False;User ID =giok-lL7cY_ENLottery-h4WTw_sa; Password=Iamirehsan1998!;Connect Timeout=15000;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    //"SqlConnection": "Data Source=.;Initial Catalog=ENLottery;Integrated Security=True;TrustServerCertificate=True;Persist Security Info=true;MultipleActiveResultSets=True"
   },
   "AllowedHosts": "*"
 }
